output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1559.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1559.py", line 188
    durations[9] - 1))))))))))
                             ^
SyntaxError: unmatched ')'
